Erasing hardcoded install directories

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -302,6 +302,13 @@ ADD_LIBRARY(pbrtlibv2
     ${VSD_HEADERS} ${VSD_SOURCES}
 )
 
+TARGET_INCLUDE_DIRECTORIES(
+    pbrtlibv2 PUBLIC
+    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>
+    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src/pbrtv2>
+    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src/pbrtv2/core>
+    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
+
 # Executable
 ADD_EXECUTABLE(pbrtv2 "src/pbrtv2/main/pbrt.cpp")
 TARGET_LINK_LIBRARIES(pbrtv2 pbrtlibv2)
